--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
   }
   
   button {
-    background-color: #4caf50;
+    background-color: #0b710e;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -28,6 +28,6 @@ body {
   }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #7ad77f;
   }
   
